Final release 260.4 (created from 260.x)

--- a/releases/index.yml
+++ b/releases/index.yml
@@ -313,6 +313,8 @@ builds:
     version: "179"
   92de234b-2361-4fa6-b8e5-48db2c77efa7:
     version: "121"
+  92e6b101-84f9-4d43-78c0-955c6c1e0dfe:
+    version: "260.4"
   93c66707a644f0704cf95ca67235d30ec4ac1706:
     version: "61"
   94066ea7-4d83-4e1b-9fcf-e0fed64eb769:
