--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -895,6 +895,10 @@ builds:
     version: c7d1de837219823e8bd990bd4ad93fda9041bb9f
     blobstore_id: 2211bc5f-0ea0-4748-ac33-d402e12978a1
     sha1: 4f525ffae30795572e3d15bbd42c4b1e3f17a141
+  c801fc513e73f1b55285b840e82caac24a435d8b:
+    version: c801fc513e73f1b55285b840e82caac24a435d8b
+    blobstore_id: a52d8f41-4a28-4740-5380-ae7742f45d01
+    sha1: ff079e16af107a21b23e9a4271ba324a3d8be439
   c86b66edd2d393569f4020eadffe0571a64ecc35:
     version: "18"
     blobstore_id: ffd6c7f0-12b9-43fc-b92d-c8a3040b5e0b
