--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -211,6 +211,10 @@ builds:
     version: 3389ff91fc1a3462a2f923bc86c3360c9425cabb
     blobstore_id: c3a15f88-2549-444b-92f8-fa2c36c694df
     sha1: 25b45273de48bf7bc373d24fc10d69c02ee0122d
+  3451fde97191ac240d10ea180b659ed55ee0ccba:
+    version: 3451fde97191ac240d10ea180b659ed55ee0ccba
+    blobstore_id: b73f4bb0-a96e-4181-75ac-a09068bb4fb4
+    sha1: 0d51151c3f39f156d74926c78b29776866936412
   3490ef9c6017570bc5b395659141123323bb52e8:
     version: "39"
     blobstore_id: 5181c4e1-5cba-4eff-9f6e-ae0024d1b8bb
