--- a/.final_builds/packages/registry/index.yml
+++ b/.final_builds/packages/registry/index.yml
@@ -187,6 +187,10 @@ builds:
     version: 31ecea1c06b8783808af792841fb359a58b7d743
     blobstore_id: afe731a2-4a14-499f-99fd-e1e07419997e
     sha1: 92a7e044f403ba29cd4ef81f78c33d7908606ff4
+  32ee06dbd6a9d048d226d77b44d32799356dc08a:
+    version: 32ee06dbd6a9d048d226d77b44d32799356dc08a
+    blobstore_id: e333fe4c-bde0-4692-516c-441a69a418bd
+    sha1: bba5cf36d31312731e7a8333ef1175d9f4e05409
   33b0a90895e8dbe6bbb6d7b4007dce4b2b9702c0:
     version: 33b0a90895e8dbe6bbb6d7b4007dce4b2b9702c0
     blobstore_id: fec5809e-ae77-43ba-8af0-a63e28413c4a
