--- a/releases/index.yml
+++ b/releases/index.yml
@@ -233,6 +233,8 @@ builds:
     version: "166"
   6c1f79fae1eb0d9b507bfbe7c7651b66b46ab6a5:
     version: "62"
+  6cf18a2e-301e-4e2a-45b0-43ec17ad48f3:
+    version: "260.5"
   6d93d456a2d1b7d698893bf826cbd43907740f93:
     version: "68"
   6e2c768f-a6b3-4ea5-a4a6-55ecb1eb4141:
