Emit teams information in heartbeats from health monitor
* Include tag for teams in datadog plugin
* Other plugins will only emit if they emit entire heartbeat event

[#138342591](https://www.pivotaltracker.com/story/show/138342591)

Signed-off-by: Topher Lubaway <clubaway@pivotal.io>

--- a/src/spec/assets/uaa_config/symmetric/uaa.yml
+++ b/src/spec/assets/uaa_config/symmetric/uaa.yml
@@ -35,6 +35,15 @@ oauth:
       secret: "short-lived-secret"
       access-token-validity: 5
       refresh-token-validity: 3600
+    team-client:
+      id: team-client
+      override: true
+      authorized-grant-types: client_credentials,refresh_token
+      scope: openid,bosh.teams.ateam.admin
+      authorities: bosh.teams.ateam.admin
+      secret: "team-secret"
+      access-token-validity: 60
+      refresh-token-validity: 3600
     no-access:
       id: no-access
       override: true
