--- a/src/stemcell_builder/stages/bosh_sysctl/assets/60-bosh-sysctl.conf
+++ b/src/stemcell_builder/stages/bosh_sysctl/assets/60-bosh-sysctl.conf
@@ -14,6 +14,7 @@ net.ipv6.conf.default.accept_ra=0
 
 net.ipv4.ip_forward=0
 net.ipv4.tcp_syncookies=1
+net.ipv4.tcp_max_syn_backlog=1280
 net.ipv4.icmp_echo_ignore_broadcasts=1
 net.ipv4.icmp_ignore_bogus_error_responses=1
 
