Final release 260.6 (created from 260.x)

--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -739,6 +739,10 @@ builds:
     version: a5f822b33d86e2ec1159bd84dcabee36e762fede
     blobstore_id: f0ebb139-e407-4b05-ac9b-497e82ffbb72
     sha1: 5dcf929a81c20b11d32c447c1e235b9e1999cc3d
+  a62c56e531c08a02f7d4a16cfcb55f1a0ad4719f:
+    version: a62c56e531c08a02f7d4a16cfcb55f1a0ad4719f
+    blobstore_id: 166754cf-1208-4c58-41ac-ba1ab7794274
+    sha1: 30fff0ff7eb8679ab0005981bb4245c7d09a3083
   a6648551fa06cff6273d6adbfc7deeecee10cf3f:
     version: a6648551fa06cff6273d6adbfc7deeecee10cf3f
     blobstore_id: b01a3714-9781-4f51-a80d-f337720301a5
