--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -507,6 +507,10 @@ builds:
     version: 79b4f54b301f1753b8c96d244a350225ea3251a2
     blobstore_id: 4070bdf8-7eac-4205-b285-8a9351cd5e14
     sha1: bf39935c13ed2529643c2b3f455baba91ee69ea9
+  7aaa38b33bd20d6ec9af72ce916f031a29cf50a4:
+    version: 7aaa38b33bd20d6ec9af72ce916f031a29cf50a4
+    blobstore_id: a9b30089-4363-4824-6923-e97daba84223
+    sha1: 08228bd6b701448187b4b36a43d763d6fc519852
   7d6018a86acb57d32204650da8e1f5799824e1f2:
     version: "51"
     blobstore_id: dc5fcbf2-bd5e-470f-bbbd-226310a87337
