--- a/releases/index.yml
+++ b/releases/index.yml
@@ -505,6 +505,8 @@ builds:
     version: "209"
   e23c7fca-8f19-463f-b479-5e04049ffaa6:
     version: "255.2"
+  e269d4db-6ce8-43bd-7971-0de7cb4ce9c6:
+    version: "260.6"
   e2c8fc6e-84a0-4d36-b2d5-354b4b2bac91:
     version: "150"
   e38055cd-d428-4d1c-8a3f-a3e983bb5af7:
