--- a/.final_builds/packages/nats/index.yml
+++ b/.final_builds/packages/nats/index.yml
@@ -1,31 +1,34 @@
----
 builds:
-  50b6a7ac922d2370f04b9cd1bb3553d67a1891d3:
-    blobstore_id: rest/objects/4e4e78bca61e121204e4e86eebe59104f7f8257ec75d
-    version: 1
-    sha1: d5a042c08c70df1e32d9b75ee3872f04c2fd08c0
-  5d2e8843f59dd01a96585a4c510639a574d58fbd:
-    blobstore_id: rest/objects/4e4e78bca21e122204e4e9863926b1050d308aa89f4c
-    version: 2
-    sha1: a3597d50dd25f9ff9b4ed3fe02289246407e37f0
-  c340f326f020a4cfbe89077242e1778df024799a:
-    blobstore_id: rest/objects/4e4e78bca51e121004e4e7d51906cd051310e8e701b2
-    version: 3
-    sha1: 6d10b2db48af6ff5d61fcb30c59a478509c13b7a
-  720422b1ba6adf981e83b46452106cbd0973e578:
-    blobstore_id: 08cc04c7-c8fd-4cb2-975a-39fc03ba894d
-    version: 720422b1ba6adf981e83b46452106cbd0973e578
-    sha1: 78729221dca72468326c7e4179d44a99b3fcf6ee
-  c3a7f3cd61598612882ffb33cf844bb07391fa17:
-    blobstore_id: 47d20afc-302f-4ad7-9d7a-25d2bbe5c09f
-    version: c3a7f3cd61598612882ffb33cf844bb07391fa17
-    sha1: ed4c03233c51b8cc477bb43a24da092d7f1240be
-  6a31c7bb0d5ffa2a9f43c7fd7193193438e20e92:
-    version: 6a31c7bb0d5ffa2a9f43c7fd7193193438e20e92
-    sha1: dee70fef63aa35a0d8e1d8fe730b5596904c4a59
-    blobstore_id: 8103f8d6-cd0c-4d88-af10-731f8afd77cb
   0155cf6be0305c9f98ba2e9e2503cd72da7c05c3:
     version: 0155cf6be0305c9f98ba2e9e2503cd72da7c05c3
-    sha1: f2a65e1e580661ab1cf36e854fc9bb14bf3d0a7f
     blobstore_id: 1b396d8e-c288-495b-800a-9d87966ce8cf
-format-version: '2'
+    sha1: f2a65e1e580661ab1cf36e854fc9bb14bf3d0a7f
+  21febceff62291ea1c232d861c5af4b047951d63:
+    version: 21febceff62291ea1c232d861c5af4b047951d63
+    blobstore_id: 53505dfd-81a8-4052-496a-4fc0148ac6da
+    sha1: 2e964615a5b7043a331ad9155cd96f1fef45cbce
+  50b6a7ac922d2370f04b9cd1bb3553d67a1891d3:
+    version: "1"
+    blobstore_id: rest/objects/4e4e78bca61e121204e4e86eebe59104f7f8257ec75d
+    sha1: d5a042c08c70df1e32d9b75ee3872f04c2fd08c0
+  5d2e8843f59dd01a96585a4c510639a574d58fbd:
+    version: "2"
+    blobstore_id: rest/objects/4e4e78bca21e122204e4e9863926b1050d308aa89f4c
+    sha1: a3597d50dd25f9ff9b4ed3fe02289246407e37f0
+  6a31c7bb0d5ffa2a9f43c7fd7193193438e20e92:
+    version: 6a31c7bb0d5ffa2a9f43c7fd7193193438e20e92
+    blobstore_id: 8103f8d6-cd0c-4d88-af10-731f8afd77cb
+    sha1: dee70fef63aa35a0d8e1d8fe730b5596904c4a59
+  720422b1ba6adf981e83b46452106cbd0973e578:
+    version: 720422b1ba6adf981e83b46452106cbd0973e578
+    blobstore_id: 08cc04c7-c8fd-4cb2-975a-39fc03ba894d
+    sha1: 78729221dca72468326c7e4179d44a99b3fcf6ee
+  c340f326f020a4cfbe89077242e1778df024799a:
+    version: "3"
+    blobstore_id: rest/objects/4e4e78bca51e121004e4e7d51906cd051310e8e701b2
+    sha1: 6d10b2db48af6ff5d61fcb30c59a478509c13b7a
+  c3a7f3cd61598612882ffb33cf844bb07391fa17:
+    version: c3a7f3cd61598612882ffb33cf844bb07391fa17
+    blobstore_id: 47d20afc-302f-4ad7-9d7a-25d2bbe5c09f
+    sha1: ed4c03233c51b8cc477bb43a24da092d7f1240be
+format-version: "2"
