--- a/.final_builds/packages/postgres-9.4/index.yml
+++ b/.final_builds/packages/postgres-9.4/index.yml
@@ -1,15 +1,18 @@
----
 builds:
-  83e114e2fc524e9a7dfc27866f5d81e7c588642f:
-    version: 83e114e2fc524e9a7dfc27866f5d81e7c588642f
-    sha1: 03fac26169fb671bb1b72d4f11dc7166b6748775
-    blobstore_id: ab50319c-f8ad-428d-b50c-06c308f00779
-  a0780058296e8fe9b3b30b6ae5b9128e6e28f7b1:
-    version: a0780058296e8fe9b3b30b6ae5b9128e6e28f7b1
-    sha1: ba831767e252ee2af82f3d2d663fbb59c64670ff
-    blobstore_id: 68fdc2a9-efb2-4246-8f2f-322eb96a6a99
+  3329e2edba0b10723881ccf6feb9fb480d284034:
+    version: 3329e2edba0b10723881ccf6feb9fb480d284034
+    blobstore_id: 8a45e082-06b7-4c51-51f1-2058adfbd25c
+    sha1: 3a406540c8c01c0a4e254994b6ce198422bd29bd
   6c9e820cdfe15267c8f864f482c7fbed0943c6de:
     version: 6c9e820cdfe15267c8f864f482c7fbed0943c6de
-    sha1: 1a0f9189055e076e24adc00f150b95ec8c73f76f
     blobstore_id: 9bfa5ac9-012f-4e0b-bfbb-f0993746d9e0
-format-version: '2'
+    sha1: 1a0f9189055e076e24adc00f150b95ec8c73f76f
+  83e114e2fc524e9a7dfc27866f5d81e7c588642f:
+    version: 83e114e2fc524e9a7dfc27866f5d81e7c588642f
+    blobstore_id: ab50319c-f8ad-428d-b50c-06c308f00779
+    sha1: 03fac26169fb671bb1b72d4f11dc7166b6748775
+  a0780058296e8fe9b3b30b6ae5b9128e6e28f7b1:
+    version: a0780058296e8fe9b3b30b6ae5b9128e6e28f7b1
+    blobstore_id: 68fdc2a9-efb2-4246-8f2f-322eb96a6a99
+    sha1: ba831767e252ee2af82f3d2d663fbb59c64670ff
+format-version: "2"
