--- a/ci/pipelines/stemcells/tasks/teardown.yml
+++ b/ci/pipelines/stemcells/tasks/teardown.yml
@@ -1,14 +1,14 @@
 ---
 platform: linux
+
 image_resource:
   type: docker-image
   source: {repository: boshcpi/cpi-certification}
 
 inputs:
-  - name: bosh-src
+  - name: bosh-deployment
   - name: director-state
   - name: bosh-cli
-  - name: cpi-release
 
 run:
   path: bosh-src/ci/pipelines/stemcells/tasks/teardown.sh
