Add dependency on bosh-src for test-stemcells.
[#138649937](https://www.pivotaltracker.com/story/show/138649937)

--- a/ci/pipelines/stemcells/pipeline.yml
+++ b/ci/pipelines/stemcells/pipeline.yml
@@ -144,6 +144,7 @@ jobs:
             - build-openstack-kvm-centos-7
             - build-vsphere-esxi-centos-7
         - get: bosh-linux-stemcell-builder
+        - get: bosh-src
         - get: bosh-deployment
         - get: bosh-cli
         - get: syslog-release
