Now rotates logs for news.
[#117393685]

Signed-off-by: Dale Wick <dwick@pivotal.io>

--- a/src/stemcell_builder/stages/rsyslog_config/assets/rsyslog_logrotate.conf
+++ b/src/stemcell_builder/stages/rsyslog_config/assets/rsyslog_logrotate.conf
@@ -28,6 +28,9 @@
 /var/log/cron.log
 /var/log/debug
 /var/log/messages
+/var/log/news/news.crit
+/var/log/news/news.err
+/var/log/news/news.notice
 {
 	su syslog syslog
 	rotate 4
