Add bosh-cli resource as input to fuzz-tests
[#125439311](https://www.pivotaltracker.com/story/show/125439311)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -409,6 +409,7 @@ jobs:
     - { get: fuzz-interval-trigger, trigger: true }
     - { get: bosh-src, trigger: true }
     - { get: bosh-fuzz-tests }
+    - { get: bosh-cli }
 
     - task: test
       privileged: true
