Allowed bosh.releases.upload to upload releases to director [#139244517](https://www.pivotaltracker.com/story/show/139244517)
Signed-off-by: J Evelyn Quintana <jquintana@pivotal.io>

--- a/src/spec/assets/uaa_config/symmetric/uaa.yml
+++ b/src/spec/assets/uaa_config/symmetric/uaa.yml
@@ -62,6 +62,15 @@ oauth:
       secret: "stemcells-secret"
       access-token-validity: 60
       refresh-token-validity: 3600
+    upload-releases-access:
+      id: upload-releases-access
+      override: true
+      authorized-grant-types: client_credentials
+      scope: openid
+      authorities: bosh.releases.upload,bosh.read
+      secret: "releases-secret"
+      access-token-validity: 60
+      refresh-token-validity: 3600
     no-access:
       id: no-access
       override: true
