--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -1135,6 +1135,10 @@ builds:
     version: fa2f3f1816be35991d4deb02defdb432b9b20b35
     blobstore_id: b2a1d924-805f-444c-a1b8-c6a740bd76a4
     sha1: 0a0cab1474173c00c8afcd2c4d87be2206e8eb5d
+  fa89b7e59b15d2d1da53be96a71a76ad48b7046c:
+    version: fa89b7e59b15d2d1da53be96a71a76ad48b7046c
+    blobstore_id: 99df2d2d-1058-4b93-4a4b-df92da17da59
+    sha1: c51ed6183c43fe5c2cd76e50657cffb2a532bd5c
   faaf78828ea7a7fb4d8d50234e2bf380b31a1b3b:
     version: "64"
     blobstore_id: d7e8219b-38ab-4059-b7b6-ac72bbabb822
