--- a/.final_builds/packages/registry/index.yml
+++ b/.final_builds/packages/registry/index.yml
@@ -223,6 +223,10 @@ builds:
     version: "17"
     blobstore_id: 6fb37431-afe6-4b08-b26d-fca249ac0dc6
     sha1: bf5d6c0c592433a48b989ea1d7d616d3067f3299
+  3a9a29c197e303d90a78c4c389a7d8b9b639e636:
+    version: 3a9a29c197e303d90a78c4c389a7d8b9b639e636
+    blobstore_id: aa561f65-46fb-4345-54b2-16b54889661c
+    sha1: ee258172ddf874ae9828ce88e5c6605c37129810
   3aa0993cb8739fd4f5c6fc1e0da8e1cfdf6df247:
     version: 3aa0993cb8739fd4f5c6fc1e0da8e1cfdf6df247
     blobstore_id: 62cd9b62-dcb1-4d81-8c33-f8981a5b6065
