--- a/releases/index.yml
+++ b/releases/index.yml
@@ -43,6 +43,8 @@ builds:
     version: "214"
   16fdbd44-0cd7-4b3d-939d-a47166146a2a:
     version: "124"
+  18104864-77e9-4458-45b4-293ea415f7eb:
+    version: "261.1"
   186178684f3ac482f8cc0c99342376d691de64e1:
     version: "82"
   19200fec012800c5725bf021e47c2ce8baa784f1:
