Update os-image pipeline for 3363.x
[#140146305](https://www.pivotaltracker.com/story/show/140146305)

Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/ci/pipelines/os-images/pipeline.yml
+++ b/ci/pipelines/os-images/pipeline.yml
@@ -45,7 +45,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh.git
-      branch: {{branch}}
+      branch: 3363.x
 
   #
   # ubuntu-trusty
