update pipeline to include upgrade-tests job for bosh group
[#139966553] (https://www.pivotaltracker.com/story/show/139966553)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -18,6 +18,7 @@ groups:
       - finalize-bosh-release
       - bats-centos
       - bats-ubuntu
+      - upgrade-tests
 
   - name: mysql
     jobs:
