aws ubuntu bats use master branch of bosh-src
[#136624141](https://www.pivotaltracker.com/story/show/136624141)

Signed-off-by: James Quintana <jquintana@pivotal.io>

--- a/ci/pipelines/aws-bats/pipeline.yml
+++ b/ci/pipelines/aws-bats/pipeline.yml
@@ -134,7 +134,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh.git
-      branch: develop
+      branch: master
 
   - name: cpi-release
     type: bosh-io-release
