--- a/ci/pipelines/docker-images/pipeline.yml
+++ b/ci/pipelines/docker-images/pipeline.yml
@@ -56,7 +56,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh.git
-      branch: {{branch}}
+      branch: master
       paths:
         - "ci/docker"
 
@@ -64,7 +64,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh-utils
-      branch: {{branch}}
+      branch: develop
       paths:
         - "ci/docker"
 
