--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -571,6 +571,10 @@ builds:
     version: 7bbfffad3b0ae7c59c97969fcb03da92d0a35a5d
     blobstore_id: c194e945-84cf-4ae7-b098-4a93ec5e1e23
     sha1: 92e2a93281bb4e1ae5865a67c28df6660b04ee74
+  7bce891171c3d4b16b26ed5dc55fa7045fa553da:
+    version: 7bce891171c3d4b16b26ed5dc55fa7045fa553da
+    blobstore_id: 1967f02c-c092-4237-7108-9b005cda930a
+    sha1: 2e3be66c25b3a95aa7b399229b83e7b4b01c27a2
   7ca2d0a5f6598e65c73ce3cff2e62d79632e0368:
     version: 7ca2d0a5f6598e65c73ce3cff2e62d79632e0368
     blobstore_id: d0c33229-3c13-4954-9efc-3b1ab44892ad
