--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -1119,6 +1119,10 @@ builds:
     version: "58"
     blobstore_id: 52824720-e0a7-4e9a-9303-2d5bef449cef
     sha1: 3ad5d6aab99419f414c4d611d539bb5f60f22151
+  fd2714251a49b15f5b51a0f28329440303fbdf8c:
+    version: fd2714251a49b15f5b51a0f28329440303fbdf8c
+    blobstore_id: 4eb23ea5-07f1-4944-5bc1-81fbf649c8fe
+    sha1: 4cb86e6a0beafc4bf005c20e352f480ce215cd72
   fd848d71bd1598f3c6bb1d36fa75290163418646:
     version: fd848d71bd1598f3c6bb1d36fa75290163418646
     blobstore_id: 4d9137d5-96b0-4515-9eaf-76e463640def
