--- a/releases/index.yml
+++ b/releases/index.yml
@@ -411,6 +411,8 @@ builds:
     version: "244"
   b412118f99ad8284b7ba77efc06dbce2dd6d50f6:
     version: "42"
+  b4f8c7bb-da27-451f-595d-51d789b62bc5:
+    version: "261.2"
   b7a3954a-44ec-4267-9846-a85c2d6cee85:
     version: "191"
   b962c80a-c270-48b6-87c3-fcda9ca34919:
